Fix contrast issues and other WAVE alerts

--- a/GitTutorial/assets/css/style.css
+++ b/GitTutorial/assets/css/style.css
@@ -44,7 +44,7 @@ button a {
 figure {
   text-align: center;
   margin-bottom: 20px;
-  color:lightslategray;
+  color:darkslategray;
 }
 
 nav ul {
@@ -118,11 +118,12 @@ footer {
 * Other general styles
 */
 .small {
+  color:darkslategray;
   font-size: .8em;
   font-weight: bold;
 }
 a small {
-  color: lightslategrey;
+  color:darkslategray;
   display: block;
   font-size: 11px;
   font-weight: normal;
